@@ -4,6 +4,8 @@
   * `vmlinuz`, `bzImage`, and `kernel` loaders are now accounted for as Linux loaders
   * Hence the `ProtectNVRAM` feature is not applied to such loaders
   * The `grub` loader was already accounted for
+- Improve OS Boot Filtering
+  * The `OSType` flag is now taken into account
 
 
 0.13.2.AN (08 Feb 2022):
